# tech-challenge-hackathon

./: .env.example  .gitignore  .watchfilesignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
app/: config.py  constants.py  main.py
app/data/training/: data.yaml
app/graphs/: __init__.py  analysis_graph.py  chat_graph.py  report_chat_graph.py
app/models/: schemas.py
app/nodes/: __init__.py  component_mapper.py  diagram_validator.py  report_compiler.py  stride_node.py  yolo_detector.py
app/routers/: analysis.py  chat.py  report_chat.py  status.py  training.py
app/services/: chat_service.py  diagram_analyzer.py  finetuning_service.py  report_generator.py  stride_analyzer.py
app/templates/: base.html  chat.html  index.html  report.html  status.html  training.html
app/tools/: __init__.py  stride_tools.py
app/utils/: __init__.py  llm.py  log_buffer.py  sse.py
scripts/: __init__.py  check_finetuning.py  merge_datasets.py
static/css/: style.css
static/js/: analysis.js  app.js  chat.js  report-chat.js  training.js
tests/: test_api.py  test_nodes.py  test_schemas.py  test_stride_analyzer.py  test_tools.py
